# DirectX12Engine

./: CameraController.cpp  CameraController.h  DX12Engine.sln
DX12Engine/: Bear.anim  Bear.matlib  Bear.smo  BearPanda.anim  BearPanda.matlib  BearPanda.smo  CMakeLists.txt  Capoeira.matlib  CapoeiraFanta.smo  CapoeiraFanta2.anim  CapoeiraFanta2.matlib  CapoeiraFanta2.smo  CharacterKit.anim  CharacterKit.smo  Cube.matlib  Cube.smo  CubeRigy.anim  CubeRigy.matlib  CubeRigy.smo  DX12Engine.vcxproj  DX12Engine.vcxproj.filters  DeferredCapsuleLightShader.hlsl  DeferredDirectionalLightShader.hlsl  DeferredIBLShader.hlsl  DeferredPointLightShader.hlsl  DeferredShaderCommon.hlsl  DeferredSpotLightShader.hlsl  EntityComponentBase.cpp  EntityComponentBase.h  FantasyKingdom_Characters.matlib  FantasyKingdom_Characters.smo  FantasyKingdom_Characters.smo.test  FantasyKingdom_Characters2.matlib  FantasyKingdom_Characters2.smo  FillGBuffer.hlsl  ForwardCapsuleLightShader.hlsl  ForwardDirectionalLightShader.hlsl  ForwardIBLShader.hlsl  ForwardPointLightShader.hlsl  ForwardShaderCommon.hlsl  (+45 more)
DX12Engine/Debug/: DX12Engine.exe.recipe  DX12Engine.ilk  vc142.idb
DX12Engine/Src/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedMeshEntityComponent.cpp  AnimatedMeshEntityComponent.h  AnimatedModelEntityComponent.cpp  AnimatedModelEntityComponent.h  CPUPerformance.cpp  CPUPerformance.h  DataContainerParser.cpp  DataContainerParser.h  DataContainerSection.cpp  DataContainerSection.h  DataFileContainer.cpp  DataFileContainer.h  Direct2D.h  Direct3D.cpp  Direct3D.h  FPSTimer.cpp  FPSTimer.h  GameTime.h  (+24 more)
(+61 files in other folders)
